--- a/task1.html
+++ b/task1.html
@@ -27,7 +27,7 @@
     <p><i>Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</i></p>
     <h2>SAMPSON</h2>
     <p>Gregory, o' my word, we'll not carry coals.</p>
-    <h2>GREGORY</h2>
-    <p>No, for then we should be colliers.</p>
+    <p>No, 111 for then we should be colliers.</p>
+    <p>New line for git.</p>
 </body>
 </html>
